# WEmbed

./: .editorconfig  .flake8  .gitignore  README.md  cli.py  coverage.xml  database.py  dev.docker-compose.yml  dev.requirements.txt  dl_doc_processor.py  enums.py  example.env  file_filter.py  file_processor.py  file_scanner.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: __init__.py  constants.py  ignore_ext.py  ignore_parts.py
db/: __init__.py  chunk_record.py  document_index.py  document_record.py  file_line.py  file_record.py  input_record.py  models.py  repo_record.py  scan_result.py  vault_record.py
dev-scripts/: build.cmd  format.cmd  run-checks.cmd  run-cleanup.cmd  run-precommit-checks.cmd
scripts/: __init__.py  build.cmd  insert_config.py  install-act-cli.cmd  run-act.cmd  run-cleanup.cmd  run-flake8.cmd
src/core/: _db.py
src/wembed/: __init__.py  cli.py  dl_doc_processor.py  file_processor.py  file_scanner.py  schemas.py
src/wembed/cli/: __init__.py  __main__.py  config_cli.py  db_cli.py  doc_processor_cli.py  file_processor_cli.py  file_scanner_cli.py
src/wembed/config/: __init__.py  _logging.py  model.py
src/wembed/constants/: __init__.py
src/wembed/db/: __init__.py  chunk_record.py  document_index.py  document_record.py  file_line.py  file_record.py  input_record.py  ps_history_record.py  repo_record.py  scan_result.py  tag_record.py  vault_record.py
src/wembed/db/tables/: __init__.py  embedding_models_table.py  ignore_ext_table.py  ignore_parts_table.py  llm_model_table.py  md_xref_table.py  tagged_items_table.py
src/wembed/scripts/: export-history.ps1  insert_config.py
src/wembed/services/: __init__.py  db_service.py
tests/: __init__.py  conftest.py  coverage.xml  test_app_configuration.py  test_config.py  test_db.py
wembed/: __init__.py  dl_doc_processor.py  file_scanner.py  schemas.py
wembed/config/: __init__.py  constants.py
wembed/db/: __init__.py  chunk_record.py  document_index.py
wembed/scripts/: insert_config.py
